spict v1.3.4
============

Minor changes:

* Scenarios that use catch fractiles now retape the fitted spict object to
  adjust ffac so that median catch yields chosen fractile of the previously
  predicted catch


spict v1.3.3
============

Minor changes:

* Extra arguments `sumspict.manage` control what is returned (uncertainty, absolute states)
* `sumspict.manage` shows informative messages when scenarios are not comparable due to assumption differences
* Management scenarios targeting absolute catch (`cabs`) or fishing mortality (`fabs`). Absolute catch scenarios are based on finding the fishing mortalirt (`ffac`) that leads to the target catch using a simple optimisation.
* Management scenarios stored in the input object
* Legend in most plots have transparent backgrounds

Bug fixes:

* Fixed previously ignored argument `include.Ebinf` in `sumspict.manage`

spict v1.3.2
============

Minor changes:

* `TMB` version 1.7.1 is required
* Package `ellipse` is now imported
* Removed `plyr` dependency

Bug fixes:

* Fixed `test.spict` to work with the management updates

spict v1.3.1
============

New features:

* New function: `plotspict.retro.fixed`. Plots parameter estimates (and confidence intervals) in each of the retrospective runs

Minor changes:

* `plotspict.retro` returns Mohn's rho if `add.mohn` is TRUE
* `plotspict.retro` was polished, added legend, better spacing
* `mohns_rho` now works for the predicted index `Ipred`
* Retro plotting and Mohn's rho remove not converged retro runs (closes #49)
* Reduced the size of retro object and added an argument to control it (closes #97)
* Added argument checks in retro, plotspict_retro and mohns_rho

Bug fixes:

* Fixed Mohn's rho calculation that was ignoring the base run
* Fixed bug in Mohn's rho calculation that included forecast period
* Fixed shorten.inp for catch and effort

spict v1.3.0 (Release date: 2020-10-23)
============

New features:
